--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Web Scraping Dashboard | PVC-OLDIVO</title>
+    <title>Web Scraping PVC-OLDIVO</title>
     <meta name="description" content="Demostraciones de web scraping con Python">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Fuentes -->
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- AOS Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
